<resources>
    <string name="app_name">Farm</string>
    <string name="logout">Logout</string>
    <string name="home">Home Page</string>
    <string name="animals">Animals </string>
    <string name="invoiceReceipt">Invoice/ Receipt </string>
    <string name="employees">Employees </string>
    <string name="vets">Vet Appointments </string>
    <string name="calvingDifficulty_prompt">Select Calving Difficulty</string>
    <string name="gender_prompt">Select Gender</string>
    <string name="aiStockBull_prompt">Select AI/ Stock Bull</string>
    <string name="viewAnimals">View Herd </string>
    <string name="title_activity_maps">Map</string>
    <string name="file_a_farm">File A Farm</string>
    <string name="farm_mananagement_filing_app">Farm Management Filing App</string>
    <string name="filefarmlogo">FileFarmLogo</string>
    <string name="weather">Weather</string>
    <string name="todolist">To Do List</string>
    <string name="nearbyPlaces">Nearby Places</string>
    <string name="breed">Breed </string>
    <string name="d_o_b">D.O.B. </string>
    <string name="tag_number">Tag Number </string>
    <string name="some_date">some date</string>
    <string name="service_the_massey_ferguson_tractor">Service the Massey Ferguson Tractor</string>
    <string name="pressure">Pressure</string>
    <string name="_06_40_am">06:40 AM</string>
    <string name="humidity">Humidity</string>
    <string name="sunrise">Sunrise</string>
    <string name="wind">Wind</string>
    <string name="title_activity_main_nav">MainNavActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_send">menu_send</string>
    <string name="appointmentTitle">Appointment Title</string>
    <string name="appointmentDescription">Description</string>
    <string name="emissions">Farm Emissions</string>
    <string name="beef">Beef Cattle</string>
    <string name="dairy">Dairy Cattle</string>
    <string name="emissionsOptions">Calculate Emissions Based on either of The Following: </string>
    <string name="beefDesc">Beef</string>
    <string name="dairyDesc">Dairy</string>
    <string name="beefEmission">Beef Emissions</string>
    <string name="numBeefBulls"> Number of Bulls </string>
    <string name="averageWeightCow">Average Weight of Beef Cow (KGs): </string>
    <string name="averageWeightBull">Average Weight Of Beef Bull (KGs):</string>
    <string name="calulateEmission">Calculate Average Farm Emissions</string>
    <string name="date_of_insemination">Date Of Insemination</string>
    <string name="cancel">Cancel</string>
    <string name="total_beef_emissions">Total Beef Emissions (KGs): </string>
    <string name="invoiceOrReceipt">Invoice or Receipt</string>
    <string name="category">Category:</string>
    <string name="select_invoice_type">Select Invoice/ Receipt </string>
    <string name="select_category">Select Category</string>
    <string name="insert_bill">Insert</string>
    <string name="calculate">Calculate</string>
    <string name="dairy_emissions">Dairy Emissions</string>
    <string name="average_milk_yield_per_cow">Average Milk Yield Per Cow P.A. (L): </string>
    <string name="number_of_milk_producing_cows">Number of Milk Producing Cows: </string>
    <string name="dairy_emissions_caps">DAIRY EMISSIONS :</string>
    <string name="numBeefCows">Number of Cows:</string>
    <string name="total_beef_bull_emissions">Approx total bull emissions (KGs): </string>
    <string name="total_beef_cows_emissions">Approx total cow emissions (KGs): </string>
    <string name="scan_barcode">Scan Barcode</string>
    <string name="beef_emissions">BEEF EMISSIONS :</string>
    <string name="number_of_bulls">Number of Bulls:</string>
    <string name="total_dairy_emissions_per_annum">Total Dairy Emissions Per Annum (KGs): </string>
    <string name="click_calendar_to_change_date">Click Calendar to Change Date.</string>
    <string name="update_the_animals_info_in_your_herd">Update the Animals info in your Herd:</string>
    <string name="dam">Dam</string>
    <string name="topic">location_notify</string>
    <string name="server_key">AAAAzctonMc:APA91bG9MGnJnzB4UxQZfgqpG1iss7d-T9nIVOJ3n3evlXAbZSdxbpWzmcP6hbmtbWnHWdnANPZnNYiKElimIIUEsaGt8IUoFr8yd8I7_KBjPtCIlTL9noPtrnHyEe5ZftnEog8R-1Jo</string>

    <string name="update_animals_info">Update Animal </string>
    <string name="search">Search</string>
    <string name="name">Search here..</string>
    <string name="hospitals">Hospitals</string>
    <string name="mechanics">Mechanics</string>
    <string name="calving_difficulty">Calving Difficulty</string>
    <string name="sire">Sire</string>
    <string name="ai_stock_bull">AI/ Stock Bull</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="insert_animal">Insert Animal</string>
    <string name="in_calve">In Calve</string>
    <string name="side_menu">side_menu</string>
    <string name="insert_invoice_receipt">Insert Invoice/ Receipt</string>
    <string name="select_invoice_receipt_image">Select invoice/ receipt image:</string>
    <string name="select_type">Select Type</string>
    <string name="herd_number">Herd Number</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="create_password">Create Password</string>
    <string name="email_address">Email Address</string>
    <string name="already_registered_login_here">Already Registered? <u><b>Login Here.</b></u></string>
    <string name="sign_up">Sign Up</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="welcome_to_file_a_farm">Welcome To File A Farm.</string>
    <string name="not_registered_sign_up_here">Not Registered? <u>Sign Up Here.</u></string>
    <string name="farmers_email">Farmers Email</string>
    <string name="enter_calving_information">Enter Calving Information:</string>
    <string name="update">Update</string>
    <string name="for_more_detail_click_here"><u>To View More Details Click Here.</u></string>
    <string name="visit_website"><u>To Visit Website Click Here.</u></string>
    <string name="ways_to_reduce_beef_emisson"><u>Find out ways to reduce Beef Emissions. </u></string>
    <string name="find_out_ways_to_reduce_dairy_emissions"><u>Find out ways to reduce Dairy Emissions.</u></string>
    <string name="title">Title</string>
    <string name="search_for_help">Send Location</string>
    <string name="date_of_appointment">Date of Appointment</string>
    <string name="animal_name">Name</string>
    <string name="vets_map_button">Vets</string>
    <string name="amount">Amount: € </string>
    <string name="date">Date: </string>
    <string name="expected_calving_date">Expected Calving Date</string>
    <string name="list_of_animals_expecting_to_calve">List of Animals Expecting to Calve</string>


</resources>
