<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_marginTop="8dp"
    android:layout_marginStart="8dp"
    android:layout_marginEnd="8dp"
    android:layout_marginRight="8dp"
    app:cardBackgroundColor="@color/white">


    <LinearLayout
        android:layout_width="399dp"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/invoiceReceiptImage"
            android:layout_width="384dp"
            android:layout_height="200dp"
            android:layout_marginTop="10dp"
            android:adjustViewBounds="true"
            android:contentDescription="@string/invoiceReceipt"
            android:cropToPadding="true"
            android:scaleType="fitXY"
            android:src="@drawable/invoice_receipt" />

            <TextView
                android:id="@+id/textViewCategory"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/category"
                android:textColor="@color/colorBlack"
                android:textSize="18sp"
                android:textStyle="bold"
                android:ellipsize="end"
                tools:ignore="UnknownId" />

        <TextView
            android:id="@+id/textViewType"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:maxLines="1"
            android:text="@string/invoiceOrReceipt"
            android:textColor="@color/colorBlack"
            android:textSize="15sp"
            android:textStyle="bold" />
    </LinearLayout>
</androidx.cardview.widget.CardView>